--- a/app/globals.css
+++ b/app/globals.css
@@ -116,8 +116,16 @@
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
     font-family: var(--font-fira-code), sans-serif;
+    line-height: 1.625;
+  }
+
+  h1,
+  h2,
+  h3 {
+    line-height: 1.25;
   }
 }
